// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/cargo/update updateDependency() handles invalid standard tables gracefully 1`] = `
"[package]
name = \\"standard-tables-example\\"
version = \\"0.1.2\\"

[dependencies.dep1]
optional=true
path=\\"./foo/bar\\"
default-features   = true
version=\\"1.2\\"




[dependencies.dep2]
                    optional=false
         path=\\"./foo/bar\\"
default-features=    true
version    =\\"3.4\\"
[dependencies.dep3]
version=     \\"~12.3.1\\"
default-features=    true
path    =\\"./foo/bar\\"

[dependencies.dep4]
version=     \\"INVALID 1.3.1 VERSION\\"
default-features=    true
path    =\\"./foo/bar\\"

[dependencies.dep5]
vesion = \\"1.2.3\\" # Intentional type
default-features = true
path = \\"./foo/bar\\""
`;

exports[`lib/manager/cargo/update updateDependency() updates inline table dependency 1`] = `
"[package]
name = \\"rustcap\\"
version = \\"0.1.2\\"
description = \\"Wrapper for libpcap\\"
homepage = \\"https://github.com/jmmk/rustcap\\"
repository = \\"https://github.com/jmmk/rustcap\\"
authors = [\\"Michael McLellan <jmikem825@gmail.com>\\"]
keywords = [\\"pcap\\", \\"libpcap\\"]
license = \\"MIT\\"
readme = \\"README.md\\"
documentation = \\"https://docs.rs/rustcap\\"

[workspace]
members = [\\"pcap-sys\\"]

[dependencies]
libc = \\"0.2.43\\"
bitflags = \\"1.0.4\\"
pcap-sys = { version = \\"0.2.0\\", path = \\"pcap-sys\\" }
pnet = { version = \\"0.21.0\\", optional = true, default-features = false}

[target.'cfg(windows)'.dependencies.winapi]
version = \\"0.3.6\\"
features = [\\"ws2def\\", \\"ws2ipdef\\"]

[features]
libpnet = [\\"pnet\\"]

[dev-dependencies]
# libc = \\"0.1.1\\"
# pnet = { version = \\"0.19.0\\", optional = true, default-features = false}
# [target.'cfg(windows)'.dependencies.winapi]
# version = \\"0.3.0\\"
# features = [\\"ws2def\\", \\"ws2ipdef\\"]"
`;

exports[`lib/manager/cargo/update updateDependency() updates normal dependency 1`] = `
"[package]
name = \\"rustcap\\"
version = \\"0.1.2\\"
description = \\"Wrapper for libpcap\\"
homepage = \\"https://github.com/jmmk/rustcap\\"
repository = \\"https://github.com/jmmk/rustcap\\"
authors = [\\"Michael McLellan <jmikem825@gmail.com>\\"]
keywords = [\\"pcap\\", \\"libpcap\\"]
license = \\"MIT\\"
readme = \\"README.md\\"
documentation = \\"https://docs.rs/rustcap\\"

[workspace]
members = [\\"pcap-sys\\"]

[dependencies]
libc = \\"0.3.0\\"
bitflags = \\"1.0.4\\"
pcap-sys = { version = \\"0.1\\", path = \\"pcap-sys\\" }
pnet = { version = \\"0.21.0\\", optional = true, default-features = false}

[target.'cfg(windows)'.dependencies.winapi]
version = \\"0.3.6\\"
features = [\\"ws2def\\", \\"ws2ipdef\\"]

[features]
libpnet = [\\"pnet\\"]

[dev-dependencies]
# libc = \\"0.1.1\\"
# pnet = { version = \\"0.19.0\\", optional = true, default-features = false}
# [target.'cfg(windows)'.dependencies.winapi]
# version = \\"0.3.0\\"
# features = [\\"ws2def\\", \\"ws2ipdef\\"]"
`;

exports[`lib/manager/cargo/update updateDependency() updates standard table table dependency 1`] = `
"[package]
name = \\"rustcap\\"
version = \\"0.1.2\\"
description = \\"Wrapper for libpcap\\"
homepage = \\"https://github.com/jmmk/rustcap\\"
repository = \\"https://github.com/jmmk/rustcap\\"
authors = [\\"Michael McLellan <jmikem825@gmail.com>\\"]
keywords = [\\"pcap\\", \\"libpcap\\"]
license = \\"MIT\\"
readme = \\"README.md\\"
documentation = \\"https://docs.rs/rustcap\\"

[workspace]
members = [\\"pcap-sys\\"]

[dependencies]
libc = \\"0.2.43\\"
bitflags = \\"1.0.4\\"
pcap-sys = { version = \\"0.1\\", path = \\"pcap-sys\\" }
pnet = { version = \\"0.21.0\\", optional = true, default-features = false}

[target.'cfg(windows)'.dependencies.winapi]
version = \\"0.4.0\\"
features = [\\"ws2def\\", \\"ws2ipdef\\"]

[features]
libpnet = [\\"pnet\\"]

[dev-dependencies]
# libc = \\"0.1.1\\"
# pnet = { version = \\"0.19.0\\", optional = true, default-features = false}
# [target.'cfg(windows)'.dependencies.winapi]
# version = \\"0.3.0\\"
# features = [\\"ws2def\\", \\"ws2ipdef\\"]"
`;
